# biblemusically

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json  vite.config.ts
.qwen/: settings.json  settings.json.orig
backend/: server.py
backend/tests/: backend_test.py  test_iteration2.py  test_iteration3.py  test_iteration4.py  test_iteration5.py
binaries/: browsh-x86_64-unknown-linux-gnu
binaries/ffmpeg/: README.md
memory/: PRD.md
scripts/: add_submodules.sh  bump-version.sh  pretauri.js  remove_bg.js  setup_sidecars.sh
src/: index.html  package.json  postcss.config.js  tailwind.config.js
src-tauri/: Cargo.toml  default.json  helpers.rs  jobs.rs  models.rs  state.rs  tauri.conf.json  test_warp.rs
src-tauri/binaries/: browsh-x86_64-unknown-linux-gnu  mongod
src-tauri/capabilities/: default.json
src-tauri/commands/: ai.rs  bible.rs  channel_creation.rs  channel_settings.rs  channels.rs  characters.rs  jobs_cmd.rs  mod.rs  oauth.rs  project_git.rs  projects.rs  sections.rs  settings.rs  songs.rs  uploads.rs
src-tauri/icons/: icon.icns
src-tauri/packaging/: README.md  install_midjourney_service.ps1  install_midjourney_service.sh  midjourney-generator.js  midjourney-session-capture.js  package-lock.json  package.json  suno-session-capture.js  youtube-channel-discovery.js  youtube-channel-switcher.js
src-tauri/packaging/node_modules_backup/: .package-lock.json
src-tauri/src/: lib.rs  main.rs
tauri/: BUILD.md  README.md
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json
(+67 files in other folders)
