[package]
name = "ai-music-video-studio"
version = "0.6.3"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

serde            = { version = "1", features = ["derive"] }
serde_json       = "1"

# MongoDB async driver
mongodb          = { version = "3" }
bson             = { version = "2", features = ["chrono-0_4"] }

# Async runtime
tokio            = { version = "1", features = ["full"] }
futures-util     = "0.3"

# HTTP client
reqwest          = { version = "0.12", features = ["json", "multipart", "blocking"] }

# Utilities
uuid             = { version = "1", features = ["v4"] }
regex            = "1"
dotenvy          = "0.15"
chrono           = { version = "0.4", features = ["serde"] }
which            = "6"
anyhow           = "1"
thiserror        = "1"
once_cell        = "1"
rand             = "0.8"
log              = "0.4"
env_logger       = "0.11"
rfd = "0.17.2"
dirs             = "5"

[features]
default          = ["custom-protocol"]
custom-protocol  = ["tauri/custom-protocol"]

[profile.release]
panic            = "abort"
codegen-units    = 1
